added and image

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This is my first practice repository</h1>
+    <img src="../images/romadan blue.avif" alt="">
 </body>
 </html>
