--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>This is my first practice repository</h1>
-    <img src="../images/romadan blue.avif" alt="">
+    <div>
+        <h1>This is an image</h1>
+        <img src="images/tree-736885_1280.jpg" alt="tree image">
+        <img src="images/romadan light.png" alt="Romadan image">
+    </div>
 </body>
 </html>
