one heading added"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div>
         <h1>This is an image</h1>
         <img src="images/tree-736885_1280.jpg" alt="tree image">
-        <img src="images/romadan light.png" alt="Romadan image">
+        <img src="images/romadan light.png" alt="Ramadan image">
+        <h1>Mayebe it will solve very soon</h1>
     </div>
 </body>
 </html>
